# dpll

./: .clang-format  .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/cnf/: cnf.c  dimacs.c
core/cnf/cnf/: cnf.h  dimacs.h
core/common/common/: bench.h  common.h  debugbreak.h  fread.h  freadall.h  log.h  sanitize.h  test.h
core/solver/: assignment.c  assignmentstack.c  dpll_solver.c  solver.c
core/solver/solver/: assignment.h  assignmentstack.h  dpll_solver.h  solver.h
res/: SPLOT-3CNF-FM-1000-100-1.00-SAT-1.dimacs  SPLOT-3CNF-FM-1000-100-1.00-SAT-10.dimacs  SPLOT-3CNF-FM-1000-100-1.00-SAT-6.dimacs  SPLOT-3CNF-FM-1000-100-1.00-SAT-9.dimacs  SPLOT-3CNF-FM-1000-100-1.00-UNSAT-1.dimacs  SPLOT-3CNF-FM-1000-100-1.00-UNSAT-2.dimacs  SPLOT-3CNF-FM-1000-100-1.00-UNSAT-4.dimacs  SPLOT-3CNF-FM-1000-100-1.00-UNSAT-6.dimacs  SPLOT-3CNF-FM-1000-100-1.00-UNSAT-9.dimacs  SPLOT-3CNF-FM-10000-1000-0.10-SAT-10.dimacs  SPLOT-3CNF-FM-10000-1000-0.10-SAT-2.dimacs  SPLOT-3CNF-FM-10000-1000-0.10-SAT-4.dimacs  SPLOT-3CNF-FM-10000-1000-0.10-SAT-7.dimacs  SPLOT-3CNF-FM-10000-1000-0.10-SAT-9.dimacs  SPLOT-3CNF-FM-2000-200-0.50-SAT-3.dimacs  SPLOT-3CNF-FM-2000-200-0.50-SAT-4.dimacs  SPLOT-3CNF-FM-2000-200-0.50-SAT-6.dimacs  SPLOT-3CNF-FM-2000-200-0.50-SAT-8.dimacs  SPLOT-3CNF-FM-2000-200-0.50-SAT-9.dimacs  SPLOT-3CNF-FM-2000-200-1.00-UNSAT-3.dimacs  SPLOT-3CNF-FM-2000-200-1.00-UNSAT-8.dimacs  SPLOT-3CNF-FM-500-50-1.00-SAT-1.dimacs  SPLOT-3CNF-FM-500-50-1.00-SAT-10.dimacs  SPLOT-3CNF-FM-500-50-1.00-SAT-2.dimacs  SPLOT-3CNF-FM-500-50-1.00-SAT-6.dimacs  SPLOT-3CNF-FM-500-50-1.00-SAT-9.dimacs  SPLOT-3CNF-FM-500-50-1.00-UNSAT-10.dimacs  SPLOT-3CNF-FM-500-50-1.00-UNSAT-5.dimacs  SPLOT-3CNF-FM-500-50-1.00-UNSAT-8.dimacs  SPLOT-3CNF-FM-5000-500-0.30-SAT-10.dimacs  SPLOT-3CNF-FM-5000-500-0.30-SAT-2.dimacs  SPLOT-3CNF-FM-5000-500-0.30-SAT-3.dimacs  SPLOT-3CNF-FM-5000-500-0.30-SAT-7.dimacs  SPLOT-3CNF-FM-5000-500-0.30-SAT-9.dimacs  _index.csv  lochau-dp-example-mod.cnf  os-model-sampling.cnf  random-2-cnf-10v-10c.cnf  random-4-cnf-20v-20c.cnf  random-6-cnf-20v-10c.cnf  (+2 more)
test/: CMakeLists.txt  test_assignment.c  test_assignmentstack.c  test_assignmentstack_view.c  test_cnf.c  test_cnf_clauseIterator.c  test_cnf_simplifiy.c  test_common.h  test_dpllsolver.c  test_dpllsolver_res.c  test_parseDimacs.c  test_solver.c
test/resources/: Adrians-3CNF-FM-2000-400-0,50-SAT-1.dimacs  SPLOT-3CNF-FM-1000-100-1.00-SAT-2.dimacs  SPLOT-3CNF-FM-1000-100-1.00-SAT-3.dimacs  SPLOT-3CNF-FM-1000-100-1.00-SAT-4.dimacs  SPLOT-3CNF-FM-1000-100-1.00-SAT-5.dimacs  SPLOT-3CNF-FM-1000-100-1.00-SAT-7.dimacs  SPLOT-3CNF-FM-1000-100-1.00-SAT-8.dimacs  SPLOT-3CNF-FM-1000-100-1.00-UNSAT-10.dimacs  SPLOT-3CNF-FM-1000-100-1.00-UNSAT-3.dimacs  SPLOT-3CNF-FM-1000-100-1.00-UNSAT-5.dimacs  SPLOT-3CNF-FM-1000-100-1.00-UNSAT-7.dimacs  SPLOT-3CNF-FM-1000-100-1.00-UNSAT-8.dimacs  SPLOT-3CNF-FM-10000-1000-0.10-SAT-1.dimacs  SPLOT-3CNF-FM-10000-1000-0.10-SAT-3.dimacs  SPLOT-3CNF-FM-10000-1000-0.10-SAT-5.dimacs  SPLOT-3CNF-FM-10000-1000-0.10-SAT-6.dimacs  SPLOT-3CNF-FM-10000-1000-0.10-SAT-8.dimacs  SPLOT-3CNF-FM-2000-200-0.50-SAT-1.dimacs  SPLOT-3CNF-FM-2000-200-0.50-SAT-10.dimacs  SPLOT-3CNF-FM-2000-200-0.50-SAT-2.dimacs  SPLOT-3CNF-FM-2000-200-0.50-SAT-5.dimacs  SPLOT-3CNF-FM-2000-200-0.50-SAT-7.dimacs  SPLOT-3CNF-FM-2000-200-1.00-UNSAT-1.dimacs  SPLOT-3CNF-FM-2000-200-1.00-UNSAT-10.dimacs  SPLOT-3CNF-FM-2000-200-1.00-UNSAT-2.dimacs  SPLOT-3CNF-FM-2000-200-1.00-UNSAT-4.dimacs  SPLOT-3CNF-FM-2000-200-1.00-UNSAT-5.dimacs  SPLOT-3CNF-FM-2000-200-1.00-UNSAT-6.dimacs  SPLOT-3CNF-FM-2000-200-1.00-UNSAT-7.dimacs  SPLOT-3CNF-FM-2000-200-1.00-UNSAT-9.dimacs  SPLOT-3CNF-FM-500-50-1.00-SAT-3.dimacs  SPLOT-3CNF-FM-500-50-1.00-SAT-4.dimacs  SPLOT-3CNF-FM-500-50-1.00-SAT-5.dimacs  SPLOT-3CNF-FM-500-50-1.00-SAT-7.dimacs  SPLOT-3CNF-FM-500-50-1.00-SAT-8.dimacs  SPLOT-3CNF-FM-500-50-1.00-UNSAT-1.dimacs  SPLOT-3CNF-FM-500-50-1.00-UNSAT-2.dimacs  SPLOT-3CNF-FM-500-50-1.00-UNSAT-3.dimacs  SPLOT-3CNF-FM-500-50-1.00-UNSAT-4.dimacs  SPLOT-3CNF-FM-500-50-1.00-UNSAT-6.dimacs  (+17 more)
tool/: CMakeLists.txt
tool/benchmark/: main.c
tool/scratch/: main.c
